tests/negative/runtime/logic_bomb_and.stream
// EXPECT: Runtime Error
// true && (CRASH) -> Should Crash
if true && (1 / 0 == 0) {
    print("Should not be here");
}